# idiffer

./: Cargo.toml  README.md
src/: app.rs  cli.rs  main.rs  theme.rs  types.rs  ui.rs  utils.rs
src/ui/: central_panel.rs  footer.rs  header.rs  mod.rs  mode_toolbar.rs
